feat: implement login functionality with JWT and refresh token handling